# aruco-tracker

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
config/: config-2024-04-11-22-19-39.yaml  config-20240326-021256.yaml  config-lab-demo.yaml  config-pill-track-lab.yaml  config-polygon-track-lab.yaml  config-round-track.yaml  config-thinkpad-testing.yaml  config1.yaml  logitech-orbicam.yaml  new-config-example.yaml  test-config-thinkpad-testing.yaml  test_config.yaml
include/: aruco_samples_utility.hpp  errors.hpp  fileio.hpp  options.hpp  plotting.hpp  tracker.hpp  tracking.hpp
include/app-framework/: App.h
include/app-framework/fonts/: Fonts.h
include/application/: application.hpp
include/core/: calibration.hpp  fileio.hpp  options.hpp  plotting.hpp  tracking.hpp
source/app-framework/: App.cpp  App.h  CMakeLists.txt
source/application/: CMakeLists.txt  application.cpp
source/core/: CMakeLists.txt
source/core/calibration/: CMakeLists.txt
source/core/calibration/Calibrator/: Calibrator.cpp  Calibrator.hpp
source/core/fileio/: CMakeLists.txt
source/core/fileio/CSVFile/: CSVFile.cpp  CSVFile.hpp
source/core/fileio/ConfigFile/: ConfigFile.cpp  ConfigFile.hpp
source/core/fileio/ErrorsPlotFile/: ErrorsPlotFile.cpp  ErrorsPlotFile.hpp
source/core/fileio/File/: File.cpp  File.hpp
source/core/fileio/PositionsPlotFile/: PositionsPlotFile.cpp  PositionsPlotFile.hpp
source/core/options/: CMakeLists.txt  Calibration.hpp  Tracking.hpp
source/core/options/BoardMarkers/: BoardMarkers.cpp  BoardMarkers.hpp
source/core/options/CalibrationBoard/: CalibrationBoard.cpp  CalibrationBoard.hpp
source/core/options/CameraIntrinsic/: CameraIntrinsic.cpp  CameraIntrinsic.hpp
source/core/options/LineFollowerMarker/: LineFollowerMarker.cpp  LineFollowerMarker.hpp
source/core/options/MarkerDetection/: MarkerDetection.cpp  MarkerDetection.hpp
source/core/tracking/: CMakeLists.txt  Output.hpp
source/core/tracking/BoardDetector/: BoardDetector.cpp  BoardDetector.hpp
source/core/tracking/LineFollowerDetector/: LineFollowerDetector.cpp  LineFollowerDetector.hpp
source/core/tracking/Tracker/: Tracker.cpp  Tracker.hpp
source/core/tracks/: CMakeLists.txt  Track.hpp
source/core/tracks/ArcTrack/: ArcTrack.cpp  ArcTrack.hpp
source/core/tracks/LineTrack/: LineTrack.cpp  LineTrack.hpp
source/core/tracks/PillTrack/: PillTrack.cpp  PillTrack.hpp
source/core/tracks/PolygonTrack/: PolygonTrack.cpp  PolygonTrack.hpp
source/core/tracks/RoundTrack/: RoundTrack.cpp  RoundTrack.hpp
source/glad/: CMakeLists.txt
src/: DetectMarkers.cpp  calibration.cpp  fileio.cpp  main.cpp  plotting.cpp  tracker.cpp  tracking.cpp
src/app-framework/: App.cpp  Native.cpp
src/app-framework/fonts/: FontAwesome5.cpp  FontAwesome5Brands.cpp  RobotoBold.cpp  RobotoItalic.cpp  RobotoMonoBold.cpp  RobotoMonoItalic.cpp  RobotoMonoRegular.cpp  RobotoRegular.cpp
src/application/: application.cpp
src/core/: calibration.cpp  fileio.cpp  main.cpp  plotting.cpp  tracking.cpp
test/: CMakeLists.txt  error_calculation_test.cpp  fileio_test.cpp
